<resources>
    <string name="app_name">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El email que ingresaste es invalido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_settings_activity">Configuración de conexión</string>
    <string name="login_label">Servidor para el inicio de sesión</string>
    <string name="login_text"></string>
    <string name="waste_label">Servidor para mermas</string>
    <string name="waste_text"></string>
    <string name="app_label">Servidor para la App</string>
    <string name="app_text"></string>
</resources>
