<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"

    android:focusableInTouchMode="true"
    android:focusable="true">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings_activity"
                android:textColor="#ffff"
                android:textSize="50pt">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textColor="#ffff"
                android:layout_gravity="left"
                android:layout_marginTop="30dp"
                android:layout_margin="20px"
                android:textSize="20dp"

                />
            <EditText
                android:id="@+id/serviceLogin"
                android:layout_height="100px"
                android:hint=" "
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_border"
                android:textColor="#7e7375"
                android:textSize="20dp"
                android:layout_margin="20px"
                android:textAlignment="center"
                android:layout_width="fill_parent">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waste_label"
                android:textColor="#ffff"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:layout_margin="20px"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/serviceWaste"
                android:layout_height="100px"
                android:hint="@string/waste_text"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_border"
                android:textColor="#7e7375"
                android:textSize="20dp"
                android:layout_margin="20px"
                android:textAlignment="center"
                android:layout_width="fill_parent">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_label"
                android:textColor="#ffff"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:layout_margin="20px"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/serviceApp"
                android:layout_height="100px"
                android:hint="@string/app_text"
                android:inputType="textPersonName"
                android:textColor="#7e7375"
                android:textSize="20dp"
                android:layout_margin="20px"
                android:textAlignment="center"
                android:background="@drawable/edit_text_border"
                android:layout_width="fill_parent">
            </EditText>

            <Button
                android:id="@+id/button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="15px"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Aceptar" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
